k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server
  namespace: test
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "server"
    networking.gke.io/v1beta1.FrontendConfig: "server"
    kubernetes.io/ingress.allow-http: "false" # comment on creation
spec:
  rules:
  - host: test.lutracorp.io
    http:
      paths:
      - path: "/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: test
            port:
              number: 30002
